--- a/eFix/ios/Podfile
+++ b/eFix/ios/Podfile
@@ -34,6 +34,8 @@ target 'eFix' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'eFixTests' do
     inherit! :search_paths
     # Pods for testing
