--- a/eFix/package.json
+++ b/eFix/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "apisauce": "^1.1.1",
     "react": "16.9.0",
-    "react-native": "0.61.2"
+    "react-native": "0.61.2",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^2.16.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
