--- a/eFix/package.json
+++ b/eFix/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "apisauce": "^1.1.1",
     "react": "16.9.0",
-    "react-native": "0.61.2"
+    "react-native": "0.61.2",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
