--- a/eFix/package.json
+++ b/eFix/package.json
@@ -14,11 +14,13 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.0",
     "react-native-paper": "^2.16.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation-material-bottom-tabs": "^2.1.2"
+    "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.2",
+    "react-navigation-stack": "^1.10.0",
+    "react-redux": "^7.1.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
