--- a/eFix/package.json
+++ b/eFix/package.json
@@ -20,6 +20,7 @@
     "react-navigation-material-bottom-tabs": "^2.1.2",
     "react-navigation-stack": "^1.10.0",
     "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
