--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node bin/server.js",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
     "dev": "cross-env NODE_ENV=test nodemon bin/server.js --ignore __tests__"
   },
   "author": "",
@@ -14,7 +14,6 @@
     "body-parser": "^1.19.0",
     "cross-env": "^6.0.3",
     "crypto": "^1.0.1",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.1.0",
     "httpd": "0.0.2"
