Teste de recuperação de horario passando #40

--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "httpd": "0.0.2"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
