--- a/.travis.yml
+++ b/.travis.yml
@@ -3,26 +3,39 @@ install:
 - npm install -g "npm@$(jq -r '.engines.npm' package.json)"
 - npm ci
 
-cache:
-  directories:
-  - node_modules
 matrix:
   include:
-  - os: linux
-    language: android
-    jdk: oraclejdk8
-    android:
-      components:
-        - build-tools-28.0.3
-        - android-28
-    before_install:
-      - yes | sdkmanager "platforms;android-28"
-      - yes | sdkmanager "build-tools;28.0.3"
-    before_script:
-      working_dir: api/
-      - npm install jest supertest --save-dev
-      
-    script:
-      working_dir: api/
+    - language: android
+      jdk: oraclejdk8
+      android:
+        components:
+          - build-tools-28.0.3
+          - android-28
+      before_install:
+        - yes | sdkmanager "platforms;android-28"
+        - yes | sdkmanager "build-tools;28.0.3"
+        
+      script:
+        - "./android/gradlew assembleRelease -p android/"
         - npm test
-      - "./android/gradlew assembleRelease -p android/"
+
+        
+      cache:
+        directories:
+          - node_modules
+
+    - language: node_js
+      node_js:
+        - 12.13
+
+      cache:
+        directories:
+          - node_modules
+
+      before_install:
+        - cd api
+      install:
+        - npm install
+        - npm install jest supertest --save-dev
+      script:
+        - npm test
