--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-paper": "^2.16.0",
+    "react-native-simple-time-picker": "^0.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.2",
