--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native": "0.61.2",
     "react-native-24h-timepicker": "^1.1.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-modal": "^11.5.3",
     "react-native-paper": "^2.16.0",
+    "react-native-ratings": "^6.5.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.2",
